# Net_Inv

./: .env.example  .gitignore  README.md  docker-compose.host-net.yml  docker-compose.yml  index.html
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: db.py  main.py
server/static/: index.html
