[project]
name = "netinv-server"
version = "0.1.0"
description = "NET-INV AV Site Coordinator — server mode (FastAPI + SQLite)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
